--- a/src/index.html
+++ b/src/index.html
@@ -49,104 +49,108 @@
       <div class="skills main__skills">
         <div class="skill__inner">
           <h2 class="section-title main__section-title">Skills</h2>
-
-          <ul class="skills__ul">
+          <ul class="ul">
             <span class="text">Actively used:</span>
-            <li class="skills__list-item">
+            <li class="ul__list-item">
               <span class="text">
                 <span class="text_fw_bold">JavaScript</span> - es5-es11, Promise, async/await;
               </span>
             </li>
-            <li class="skills__list-item">
+            <li class="ul__list-item">
               <span class="text">
                 <span class="text_fw_bold">TypeScript</span>;
               </span>
             </li>
-            <li class="skills__list-item">
+            <li class="ul__list-item">
               <span class="text">
                 <span class="text_fw_bold">HTML5/CSS3</span> - flex-box, BEM;
               </span>
             </li>
-            <li class="skills__list-item">
+            <li class="ul__list-item">
               <span class="text">
                 <span class="text_fw_bold">SASS, SCSS</span>;
               </span>
             </li>
-            <li class="skills__list-item">
+            <li class="ul__list-item">
+              <span class="text">
+                <span class="text_fw_bold">UI libraries</span> - Material UI, Ant Design, Element UI (with Vue);
+              </span>
+            </li>
+            <li class="ul__list-item">
               <span class="text">
                 <span class="text_fw_bold">StyledComponents</span>;
               </span>
             </li>
-            <li class="skills__list-item">
+            <li class="ul__list-item">
               <span class="text">
                 <span class="text_fw_bold">React.js</span> - React hooks, Redux/Redux toolkit, Reselect, NextJS;
               </span>
             </li>
-            <li class="skills__list-item">
+            <li class="ul__list-item">
               <span class="text">
                 <span class="text_fw_bold">Jest, Enzyme</span>;
               </span>
             </li>
-            <li class="skills__list-item">
+            <li class="ul__list-item">
               <span class="text">
                 <span class="text_fw_bold">Storybook</span>;
               </span>
             </li>
-            <li class="skills__list-item">
+            <li class="ul__list-item">
               <span class="text">
                 <span class="text_fw_bold">Node.js</span> - Express.js;
               </span>
             </li>
-            <li class="skills__list-item">
+            <li class="ul__list-item">
               <span class="text">
                 <span class="text_fw_bold">MongoDB, mongoose</span>;
               </span>
             </li>
-            <li class="skills__list-item">
+            <li class="ul__list-item">
               <span class="text">
                 <span class="text_fw_bold">Figma, Photoshop</span>
               </span>
             </li>
-            <li class="skills__list-item">
-              <span class="text">
-                <span class="text_fw_bold">GitHub desktop</span>
-              </span>
-            </li>
           </ul>
 
-          <ul class="skills__ul">
+          <ul class="ul">
             <span class="text">Know poorly/rarely used:</span>
-            <li class="skills__list-item">
+            <li class="ul__list-item">
               <span class="text">
                 <span class="text_fw_bold">React Testing Library</span>;
               </span>
             </li>
-            <li class="skills__list-item">
+            <li class="ul__list-item">
               <span class="text">
                 <span class="text_fw_bold">Vue.js</span>;
               </span>
             </li>
-            <li class="skills__list-item">
+            <li class="ul__list-item">
+              <span class="text">
+                <span class="text_fw_bold">Docker</span>;
+              </span>
+            </li>
+            <li class="ul__list-item">
               <span class="text">
                 <span class="text_fw_bold">Git</span> - usually, I use "checkout", "commit", "add" and other commonly used commands;
               </span>
             </li>
-            <li class="skills__list-item">
+            <li class="ul__list-item">
               <span class="text">
                 <span class="text_fw_bold">Webpack, Gulp</span>;
               </span>
             </li>
-            <li class="skills__list-item">
+            <li class="ul__list-item">
               <span class="text">
                 <span class="text_fw_bold">CSS Grid Layout</span>;
               </span>
             </li>
-            <li class="skills__list-item">
+            <li class="ul__list-item">
               <span class="text">
                 <span class="text_fw_bold">MySQL</span>;
               </span>
             </li>
-            <li class="skills__list-item">
+            <li class="ul__list-item">
               <span class="text">
                 <span class="text_fw_bold">C#, PHP</span>;
               </span>
@@ -157,15 +161,15 @@
         <div class="skill__inner">
           <h2 class="section-title main__section-title">Languages</h2>
 
-          <ul class="skills__ul">
-            <li class="skills__list-item">
+          <ul class="skills__ul ul">
+            <li class="ul__list-item">
               <span class="text">
                 <span class="text_fw_bold">Russian</span> - native;
               </span>
             </li>
-            <li class="skills__list-item">
+            <li class="ul__list-item">
               <span class="text">
-                <span class="text_fw_bold">English</span> - can read/write documentation, watch speeches from conferences, video-tutorials; spoken - pre-intermediate;
+                <span class="text_fw_bold">English</span> - can read/write documentation, watch speeches from conferences, video-tutorials; spoken - pre-intermediate/intermediate;
               </span>
             </li>
           </ul>
@@ -181,17 +185,20 @@
         <span class="text">
           Common tasks:
         </span>
-        <ul class="work__projects-ul">
-          <li class="skills__list-item">
+        <ul class="work__projects-ul ul">
+          <li class="ul__list-item">
             <span class="text">development: forms, app sections, UI elements (inputs, buttons, etc.) and writing README to them;</span>
           </li>
-          <li class="skills__list-item">
+          <li class="ul__list-item">
             <span class="text">taking a part in daily meetings, retros, planning;</span>
           </li>
-          <li class="skills__list-item">
+          <li class="ul__list-item">
+            <span class="text">collaborating with analysts, QA, managers, back-end and front-end developers;</span>
+          </li>
+          <li class="ul__list-item">
             <span class="text">code-review;</span>
           </li>
-          <li class="skills__list-item">
+          <li class="ul__list-item">
             <span class="text">bug fixes;</span>
           </li>
         </ul>
@@ -200,24 +207,19 @@
           <span class="text">
             Platform (SPA made with <span class="text_fw_bold">React/Redux</span>) for creating mailings:
           </span>
-          <ul class="work__projects-ul">
-            <li class="skills__list-item">
+          <ul class="work__projects-ul ul">
+            <li class="ul__list-item">
               <span class="text">line chart development using <span class="text_fw_bold">D3.js</span>;</span>
             </li>
-            <li class="skills__list-item">
+            <li class="ul__list-item">
               <span class="text">third party services integration using <span class="text_fw_bold">iframe</span>;</span>
             </li>
-            <li class="skills__list-item">
+            <li class="ul__list-item">
               <span class="text">
                 refactoring components and their testing via <span class="text_fw_bold">Enzyme</span> and <span
                   class="text_fw_bold">Jest</span> -
                 rewrote a lot of legacy components with UNSAFE methods to
                 functional components with writing tests first;
-              </span>
-            </li>
-            <li class="skills__list-item">
-              <span class="text">
-                work in pair with a back-end developer;
               </span>
             </li>
           </ul>
@@ -226,25 +228,28 @@
             Administration panels using <span class="text_fw_bold">React</span>(mostly) and <span class="text_fw_bold">Vue</span>:
           </span>
           <ul class="work__projects-ul">
-            <li class="skills__list-item">
+            <li class="ul__list-item">
               <span class="text">setting authorization flow up;</span>
             </li>
-            <li class="skills__list-item">
-              <span class="text">custom table development: a user can adjust the table columns width, their order (via HTMP Drag'n'Drop API) and number; settings are stored at the user computer and restored after page refresh or revisiting a section with the table;</span>
+            <li class="ul__list-item">
+              <span class="text">custom table development: a user can adjust the table columns width, their order <span class="text_fw_bold">(via HTMP Drag'n'Drop API)</span> and number; settings are stored at the user computer and restored after page refresh or revisiting a section with the table;</span>
             </li>
-            <li class="skills__list-item">
+            <li class="ul__list-item">
               <span class="text">development of highly flexible filters with url parameters synchronization for tables;</span>
             </li>
-            <li class="skills__list-item">
+            <li class="ul__list-item">
+              <span class="text">work with <span class="text_fw_bold">2Gis</span> and <span class="text_fw_bold">Yandex</span> maps;</span>
+            </li>
+            <li class="ul__list-item">
               <span class="text">linter set up and tidying up the file structure;</span>
             </li>
-            <li class="skills__list-item">
+            <li class="ul__list-item">
               <span class="text">participating in UI design improvements;</span>
             </li>
-            <li class="skills__list-item">
-              <span class="text">setting Storybook up;</span>
+            <li class="ul__list-item">
+              <span class="text">setting <span class="text_fw_bold">Storybook</span> up;</span>
             </li>
-            <li class="skills__list-item">
+            <li class="ul__list-item">
               <span class="text">helping junior developer;</span>
             </li>
           </ul>
@@ -257,12 +262,12 @@
             <h3 id="trello-like" class="projects__title">Trello-like</h3>
             <span class="projects__title-explanation"> - a Kanban board.</span>
   
-            <span class="text text_mt_12">Web application, which replicates most functionality of Trello. Made with 
+            <span class="text text_mt_8">Web application, which replicates most functionality of Trello. Made with 
               <span class="text_fw_bold">React, Redux, NodeJS(Express), MongoDB(mongoose)</span>. Implemented <span
                 class="text_fw_bold">Drag and Drop</span> functionality without third party libraries or HTML Drag and Drop
               API.</span>
   
-            <span class="text text_mt_12">GitHub - <a target="_blank" href="https://github.com/Sv1nnet/trello-react-app"
+            <span class="text text_mt_8">GitHub - <a target="_blank" href="https://github.com/Sv1nnet/trello-react-app"
                 class="projects__link">https://github.com/Sv1nnet/trello-react-app</a></span>
   
           </div>
@@ -271,23 +276,49 @@
             <h3 id="trello-like" class="projects__title">E-commerce</h3>
             <span class="projects__title-explanation"> - online store.</span>
   
-            <span class="text text_mt_12">Study project in which I learned
+            <span class="text text_mt_8">Study project in which I learned
               <span class="text_fw_bold">TypeScript</span> and tried it out with с <span
                 class="text_fw_bold">React/Redux</span>. <span class="text_fw_bold">BEM</span> as a style methodology.
               A small mobile phones e-store. Goods filter and simple form validation are implemented.
               I used <span
                 class="text_fw_bold">react-hook-form</span> for forms.</span>
   
-            <span class="text text_mt_12">Link - <a target="_blank"
+            <span class="text text_mt_8">Link - <a target="_blank"
                 href="https://sv1nnet.github.io/e-commerce--react--typescript/"
                 class="projects__link">https://sv1nnet.github.io/e-commerce--react--typescript/</a></span>
   
-            <span class="text text_mt_12">GitHub - <a target="_blank"
+            <span class="text text_mt_8">GitHub - <a target="_blank"
                 href="https://github.com/Sv1nnet/e-commerce--react--typescript"
                 class="projects__link">https://github.com/Sv1nnet/e-commerce--react--typescript</a></span>
   
           </div>
+
         </div>
+      </div>
+      <div class="about main__about">
+        <h2 class="section-title main__section-title">About me</h2>
+        <br>
+        <p class="text">
+          I started with studying C# and Unity3d and planned to make a mobile game.
+          After half a year I realized that I wanted to do development professionally and started studying Front-end.
+        </p>
+
+        <span class="text text_mt_12">My journey into development consisted of the following steps:</span>
+        <ul class="ul about__ul">
+          <li class="ul__list-item"><span class="text">2017 - started with learning free materials on the Internet and reading books about <span
+              class="text_fw_bold">JS</span>;</span></li>
+          <li class="ul__list-item"><span class="text">half a year later made a landing page for my brother's business;</span></li>
+          <li class="ul__list-item"><span class="text">a year later finished and published my first pet-project - psychological questionnaire (MPDQ) by Lychko;</span></li>
+          <li class="ul__list-item"><span class="text">a year and half later finished pretty big pet-project <span class="text_fw_bold">Trello-like,</span>
+            that I developed for my portfolio and to study <span class="text_fw_bold">MERN</span> stack;</span></li>
+          <li class="ul__list-item"><span class="text">in two years I got my first job as a Front-end developer after completing test task for a
+            <span class="text_fw_bold">Middle</span> position;</span></li>
+        </ul>
+
+        <p class="text text_mt_12">
+          In my spare time I study English, different technologies and tools, improving CS.
+          Development to me isn't just a work, it's also a hobby, so I like spending time working on pet-projects and helping friends to learn programming.
+        </p>
       </div>
     </main>
   </div>
